<resources>

    <!--login-->

    <string name="app_name">Bienvenido</string>
    <string name="btnLogin">Conectarse</string>
    <string name="btnRegister">Registrarse</string>
    <string name="txtUser">Usuario</string>
    <string name="txtPass">Contraseña</string>
    <string name="checkbox">Recuerdame</string>
    <string name="descripcionImagen">Fondo de la aplicación</string>
    <string name="descripcionImagen2">Icono de la aplicación</string>
    <string name="msgErrorLogin">Nombre de usuario y/o contraseña incorrectos</string>
    <string name="msgLogin">Bienvenido a nuestra clínica virtual</string>

    <!--registro-->

    <string name="txtUserRegister">Introduzca un nombre de usuario</string>
    <string name="txtPassRegister">Introduzca una contraseña</string>
    <string name="txtEmailRegister">Introduzca email</string>
    <string name="btnConfirmarFormulario">Enviar</string>
    <string name="link">Al registrarte, aceptas nuestras Condiciones y la Política de privacidad</string>
    <string name="btnCondiciones">Ver condiciones</string>


    <!--menú principal-->

    <string name="txtConectado">Conectado como: </string>
    <string name="btnCita">Solicitar </string>
    <string name="btnBorrarCita">Borrar</string>
    <string name="txtFecha">Fecha:</string>
    <string name="txtHora">Hora:</string>
    <string name="txtConsulta">Consulta:</string>
    <string name="btnEditarConsulta">EDITAR:</string>
    <string name="txtMedica">Medico/a:</string>


    <!--citas-->

    <string name="lblFecha">Fecha:</string>
    <string name="spiFecha">Fecha:</string>
    <string name="spiHora">Hora:</string>
    <string name="lblHora">Hora:</string>
    <string name="multitxtMotivo">Motivo:</string>
    <string name="btnConfirmarCita">CONFIRMAR</string>
    <string name="lblMotivo">Motivo:</string>




</resources>
