<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dip">

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtUserRegister"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:hint="@string/txtEmailRegister"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"
        android:layout_marginTop="15dip"
        android:hint="@string/txtPassRegister"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:text="@string/btnConfirmarFormulario" />

    <TextView
        android:id="@+id/link"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:layout_marginBottom="5dip"
        android:gravity="center"
        android:text="@string/link"
        android:textColor="#0b84aa"
        android:textSize="20dip" />

    <Button
        android:id="@+id/btnCondiciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnCondiciones" />


</LinearLayout>