<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grupo5.practica_android_1_evaluacion_grupo_5.PrincipalVertical"
    android:background="@drawable/background">


    <LinearLayout
        android:paddingTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="39dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:paddingBottom="5dp"
            app:srcCompat="@drawable/icon"/>

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/estilo_de_texto"
            android:hint="@string/txtUser"
            android:textColor="@color/miColor1"/>

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/estilo_de_texto"
            android:hint="@string/txtPass"
            android:textColor="@color/miColor1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/estilo_botones_seleccion"
                android:text="@string/btnLogin"
                android:textColor="@color/miColor1" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/estilo_botones_seleccion"
                android:text="@string/btnRegister"
                android:textColor="@color/miColor1" />


        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
