<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grupo5.practica_android_1_evaluacion_grupo_5.Principal"
    android:background="@drawable/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="491dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spiIdioma">

        <ImageView
            android:id="@+id/imvLogo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:paddingBottom="5dp"
            app:srcCompat="@drawable/icon" />

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/estilo_de_texto"
            android:hint="@string/txtUser"
            android:textColor="@color/miColor1" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/estilo_de_texto"
            android:hint="@string/txtPass"
            android:textColor="@color/miColor1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/estilo_botones_seleccion"
                android:onClick="conexion"
                android:text="@string/btnLogin"
                android:textColor="@color/miColor1" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/estilo_botones_seleccion"
                android:onClick="registrarse"
                android:text="@string/btnRegister"
                android:textColor="@color/miColor1" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cbRecordar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/estilo_de_texto"
            android:text="@string/checkbox" />


    </LinearLayout>

    <Spinner
        android:id="@+id/spiIdioma"
        android:layout_width="30dp"
        android:layout_height="37dp"
        app:layout_constraintStart_toEndOf="@+id/imvIdioma"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imvIdioma"
        android:layout_width="46dp"
        android:layout_height="37dp"
        android:layout_marginStart="244dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/es" />
</android.support.constraint.ConstraintLayout>
